--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-MONGODB_URI = ""
-RESEND_API_KEY="re_g7WkJgD7_K5LkAuDC6VYA4QjzNcSEKNuT"
+MONGODB_URI = "mongodb+srv://nadeemsangrasi903:ioz05piQ9EMbd2wx@cluster0.al4ng.mongodb.net/"
+RESEND_API_KEY="re_GPBQ6qQt_DBqfe87MQ7AsqB1VVV54pWsk"
 NEXTAUTH_SECRET="nadeemkhan"
+
+
