--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.1.8",
+    "embla-carousel-react": "^8.1.8",
     "lucide-react": "^0.428.0",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
