add node mailer

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 MONGODB_URI = "mongodb+srv://nadeemsangrasi903:ioz05piQ9EMbd2wx@cluster0.al4ng.mongodb.net/"
 RESEND_API_KEY="re_GPBQ6qQt_DBqfe87MQ7AsqB1VVV54pWsk"
 NEXTAUTH_SECRET="nadeemkhan"
-
+DOMAIN=https://localhost:3000
+USER=nadeemsangrasi903@gmail.com
+PASSWORD=wedt smoi ixjp pulw
